--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/studentlibrary?createTableIfNo
 
 #Set your login credentials here
 spring.datasource.username=root
-spring.datasource.password=31282226
+spring.datasource.password=
 
 
 #We are writing this thing for hibernate
